[gd_scene load_steps=14 format=3 uid="uid://rv3opb08nnaa"]

[ext_resource type="Texture2D" uid="uid://dou7uq50ovnae" path="res://assets/sprites/in game assets/ground/breaking sand block-sheet.png" id="1_n8iqm"]
[ext_resource type="Script" path="res://scripts/breakable sand block.gd" id="1_wmd8f"]
[ext_resource type="Texture2D" uid="uid://mkelkacvx0na" path="res://assets/sprites/characters/player/knight (2).png" id="2_87vsg"]

[sub_resource type="AtlasTexture" id="AtlasTexture_hocet"]
atlas = ExtResource("1_n8iqm")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_dyxoh"]
atlas = ExtResource("1_n8iqm")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_k4ltm"]
atlas = ExtResource("1_n8iqm")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8nvmg"]
atlas = ExtResource("2_87vsg")
region = Rect2(240, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_3wtmh"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hocet")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dyxoh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k4ltm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8nvmg")
}],
"loop": false,
"name": &"break",
"speed": 3.0
}]

[sub_resource type="Animation" id="Animation_k6b36"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 0)]
}

[sub_resource type="Animation" id="Animation_ap5pv"]
resource_name = "break"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1, 0), Vector2(-1, 0), Vector2(1, 0), Vector2(-1, 0), Vector2(1, 0), Vector2(-1, 0), Vector2(1, 0), Vector2(-1, 0), Vector2(1, 0), Vector2(-1, 0), Vector2(1, 0), Vector2(-1, 0), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_funb8"]
_data = {
"RESET": SubResource("Animation_k6b36"),
"break": SubResource("Animation_ap5pv")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k37pd"]
size = Vector2(16, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wntjf"]
size = Vector2(14, 2)

[node name="Breakable block" type="AnimatableBody2D"]
script = ExtResource("1_wmd8f")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(1, 0)
sprite_frames = SubResource("SpriteFrames_3wtmh")
animation = &"break"

[node name="AnimationPlayer" type="AnimationPlayer" parent="AnimatedSprite2D"]
libraries = {
"": SubResource("AnimationLibrary_funb8")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_k37pd")
one_way_collision = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -9)
shape = SubResource("RectangleShape2D_wntjf")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="ReturnTimer" type="Timer" parent="."]
one_shot = true

[connection signal="animation_finished" from="AnimatedSprite2D/AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="ReturnTimer" to="." method="_on_return_timer_timeout"]
